* Added the option to set the "Reply-To" mail header in mail-format.
git-svn-id: http://monit.googlecode.com/svn/trunk@270 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -37,6 +37,8 @@ NEW FEATURES AND FUNCTIONS:
 
 * The 'check system' can now use start/stop program statements too.
 
+* Added the option to set the "Reply-To" mail header in mail-format.
+
 * Display backtrace on error if debug mode is enabled (requires backtrace
   support in libc)
 
