Do not log error if different response type is received. This could happen normally, as if we send ECHO_REQUEST via raw socket and read from it, we receive all ICMP requests from the host to which the socket is open during waiting for response.
The symptoms is sporadic transient error which doesn't fail the test:

host1:
Sep 28 07:52:59 t1 monit[316]: ICMP echo response for 192.168.0.2 1/3 failed -- received echo request instead of expected response, source id=29988 (mine id=316) sequence=0 (mine sequence=0)

host2:
Sep 28 07:52:59 t2 monit[29988]: ICMP echo response for 192.168.0.1 1/3 failed -- received echo request instead of expected response, source id=316 (mine id=29988) sequence=0 (mine sequence=0)

... here two monit instances are pinging each other and both received the other's request when waiting for response to its own request.

Veryfied how other ping utilities (fping, iputil's ping) solve the situation, they simply continue as well and handle the situation as not-an-error.

Since we try up to 3 times by default, the loop will continue, send second request and wait for response. During second wait-response try, we may receive
the response to the first or second request (both are accepted). Similarly it can be repeated 3rd time. If we received different response type in all
three cases, the loop is terminated and error returned. In practice i never seen more then 1/3 sporadic error, it serves also for safety so monit won't
loop in the icmp test when the host will be flooded with ICMP messages. The user may rise the tries from default 3 to custom value in case 3 will be problem.

Degrading the response type message from error to debug, as it is not an error, but it will be possible to see what happens in debug mode in case there will
be some issues.




git-svn-id: http://monit.googlecode.com/svn/trunk@291 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,7 +11,11 @@ Version 5.3
 
 BUGFIXES:
 
+* ICMP echo test (ping):
+     - do not log error if different response type is received
+
 * Fix crash on MacOSX
+
 
 
 Version 5.2.1
@@ -24,6 +28,7 @@ BUGFIXES:
   the process of fixing this bug the new feature that allowed slash in
   service names has been reverted and instead will be added in a later
   release.
+
 
 
 Version 5.2
