bug #31128 (icmp response type error message)
git-svn-id: http://monit.googlecode.com/svn/trunk@292 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,7 +12,7 @@ Version 5.3
 BUGFIXES:
 
 * ICMP echo test (ping):
-     - do not log error if different response type is received
+     - bug #31128: do not log error if different response type is received
 
 * Fix crash on MacOSX
 
