Fix rsync protocol test:
1.) send the full greeting back to the server (including minor version) ... originally rsync server returned error as the greeting sent by
    monit was missing minor version

2.) process full server response (listing + exit) so we won't close the connection too early (on first listing line) and won't
   send TCP RST back to server when rest of response is received



git-svn-id: http://monit.googlecode.com/svn/trunk@298 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -21,6 +21,9 @@ BUGFIXES:
        perform ping, monit will skip the icmp test and log message (in debug
        mode only).
 
+* rsync protocol test:
+     - bug #31249: send full version to rsync server
+
 
 
 Version 5.2.1
