rsync: more details for fix so if somebody had these problems, he can expect the new monit version will fix it
git-svn-id: http://monit.googlecode.com/svn/trunk@300 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -24,6 +24,7 @@ BUGFIXES:
 * rsync protocol test:
      - bug #31249: send full version to rsync server. Thanks to John Hall for
        report
+     - wait for full server response and verify exit was received
 
 
 
