--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -22,9 +22,9 @@ BUGFIXES:
        mode only).
 
 * rsync protocol test:
-     - bug #31249: send full version to rsync server. Thanks to John Hall for
-       report
      - wait for full server response and verify exit was received
+     - bug #31249: send full version to rsync server. Thanks to John Hall
+       for report
 
 
 
