--- a/monit.pod
+++ b/monit.pod
@@ -476,9 +476,7 @@ for example by:
 Monit will then not monitor the service. This allows for having
 services configured in monitrc and start it with Monit only if it
 should run. This feature can be used to build a simple failsafe
-cluster. To see how, read more about how to setup a cluster with
-Monit using the I<heartbeat> system in the examples sections
-below.
+cluster.
 
 A service's monitoring state is persistent across Monit restart.
 This means that you probably would like to make certain that
