fix solaris device file support in check filesystem path
git-svn-id: http://monit.googlecode.com/svn/trunk@313 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,7 +11,7 @@ Version 5.2.4
 
 BUGFIXES:
 
-* FreeBSD, NetBSD, OpenBSD, MacOSX filesystem check fix:
+* FreeBSD, NetBSD, OpenBSD, MacOSX, Solaris filesystem check fix:
   If block/character device was used in the check path instead
   of mountpoint, monit reported usage of wrong filesystem.
 
