Added the "procmatch" command to monit CLI to allow to test the pattern for process matching based check with processes visible to monit.   Example usage:       $ monit procmatch "iChatAgent"
git-svn-id: http://monit.googlecode.com/svn/trunk@322 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,6 +9,16 @@
 
 Version 5.2.4
 
+NEW FEATURES AND FUNCTIONS:
+
+* Added the "procmatch" command to monit CLI to allow to test the
+  pattern for process matching based check with processes visible
+  to monit.
+  Example usage:
+      $ monit procmatch "iChatAgent"
+
+* Reduced monit memory footprint.
+
 BUGFIXES:
 
 * FreeBSD, NetBSD, OpenBSD, MacOSX, Solaris filesystem check fix:
@@ -22,10 +32,6 @@ BUGFIXES:
 
 * If protocol test failed, print request path in the event if it is
   set in monit configuration file. Thanks to Marco for report.
-
-IMPROVEMENTS:
-
-* Reduced memory usage.
 
 
 
