Spelling fixes. Thanks to Sergey B Kirpichev
git-svn-id: http://monit.googlecode.com/svn/trunk@323 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -33,6 +33,8 @@ BUGFIXES:
 * If protocol test failed, print request path in the event if it is
   set in monit configuration file. Thanks to Marco for report.
 
+* Spelling fixes. Thanks to Sergey B Kirpichev.
+
 
 
 Version 5.2.3
