* Set the default log file mask to 0640 (originally it was 0664).   Thanks to Sergey B Kirpichev.
git-svn-id: http://monit.googlecode.com/svn/trunk@324 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -19,6 +19,9 @@ NEW FEATURES AND FUNCTIONS:
 
 * Reduced monit memory footprint.
 
+* Set the default log file mask to 0640 (originally it was 0664).
+  Thanks to Sergey B Kirpichev.
+
 BUGFIXES:
 
 * FreeBSD, NetBSD, OpenBSD, MacOSX, Solaris filesystem check fix:
